- Improved: Better indication of invalid fields on unit conversion edit page (#682)
- Fixed: Home Assistant offline error (#670)
- Fixed: On login pages all barcode formats were allowed, now only QR code format is recognized
- Fixed: Deprecated Google Play developer profile link
- Fixed: Demo domain change with translation which has a specific region

## 3.1.1

- Fixed: Home Assistant core update broke session authentication, this fix can be a bit buggy (#670)
- Fixed: Crashes where parsing a wrong formatted floating point number was the reason (#652)

## 3.1.0

- New: Fulfillment check for every ingredient on recipe page
- New: Total price displayed on shopping list bottom (#645)
- New: Stock overview page has new status filter "not fresh" for combined results (#661)
- New: "Should not be frozen" toggle on master product page and warn user if appropriate (#638)
- New: Inventory form can now be used to link unknown barcode to product without any action (#605)
- Improved: Finally the floating action button stays visible when the keyboard is shown (#405)
- Improved: Bottom bar not above keyboard anymore
- Improved: Prevent status messages from covering elements like floating action button or bottom bar
- Improved: Animated menu icons in bottom bar when navigating
- Improved: Network and user interface behavior when offline (#492)
- Improved: Info shown for action button on overview start page (#540)
- Improved: On recipe page ingredients now can be added to shopping list with exclude option (#632)
- Improved: App now supports disabled stock feature and hides stock parts, same with recipes (#647)
- Improved: When adding an unknown barcode through purchase or inventory, note is saved (#644, #619)
- Improved: When adding an unknown barcode through purchase, amount and unit is saved (#644)
- Improved: Shopping list item page now also uses "Choose product" page for unknown barcodes
- Improved: Bottom dialog behavior when keyboard is shown